# scrapy-nimble

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scrapy_nimble/: middlewares.py
tests/: conftest.py  test_middleware_config.py
